created labelled dataset at end of kmeans

--- a/CustomerDataset.ipynb
+++ b/CustomerDataset.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -25,12 +25,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "clustered dataframe saved to 'clustered_dataframe.csv'\n"
+     ]
+    }
+   ],
    "source": [
     "# loading cleaned dataframe\n",
-    "df = pd.read_csv('cleaned_dataframe.csv', sep='\\t', index_col=0)"
+    "df = pd.read_csv('clustered_dataframe.csv', sep='\\t', index_col=0)\n",
+    "df = df.round(3)\n",
+    "\n",
+    "path = 'clustered_dataframe.csv'\n",
+    "df.to_csv(path, sep='\\t')\n",
+    "print(f\"clustered dataframe saved to '{path}'\")"
    ]
   },
   {
@@ -1568,7 +1581,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.3"
+   "version": "3.8.6"
   }
  },
  "nbformat": 4,
