Created funcs smote_and normalize & normalize_and_smote to put all the procedure in one func

--- a/Classification_NN.ipynb
+++ b/Classification_NN.ipynb
@@ -706,6 +706,36 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [
+    "def smote_and_normalize():\n",
+    "    pass"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [
+    "def normalize_and_smote():\n",
+    "    pass"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
    "execution_count": 190,
    "outputs": [
     {
