Filled smote_and_normalize()

--- a/Classification_NN.ipynb
+++ b/Classification_NN.ipynb
@@ -706,11 +706,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 199,
    "outputs": [],
    "source": [
-    "def smote_and_normalize():\n",
-    "    pass"
+    "def preliminary_ops(df):\n",
+    "    # discretize and delete the categorical attributes\n",
+    "    df = discretize_data(df,['MaxOrderMonth','Label'])\n",
+    "    print(f\"Label num for High_Spend: {int(df[df['Label'] == 'High_Spend']['Label_num'].unique())}\")\n",
+    "    print(f\"Label num for Low_Spend: {int(df[df['Label'] == 'Low_Spend']['Label_num'].unique())}\")\n",
+    "    print(f\"Label num for Med_Spend: {int(df[df['Label'] == 'Med_Spend']['Label_num'].unique())}\")\n",
+    "\n",
+    "    # Drop categorical columns and keep only the corresponding numerical ones\n",
+    "    df.drop(columns=['MaxOrderMonth','Label'], inplace=True, errors='ignore')\n",
+    "\n",
+    "    # Remove the labels from the dataframe and store them in a variable (pandas.Series)\n",
+    "    labels = df.pop('Label_num')\n",
+    "\n",
+    "    return df, labels"
    ],
    "metadata": {
     "collapsed": false,
@@ -721,7 +733,55 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 200,
+   "outputs": [],
+   "source": [
+    "def smote_and_normalize(df):\n",
+    "    df, labels = preliminary_ops(df)\n",
+    "\n",
+    "    # SMOTE --> balance the number of entries of each class\n",
+    "    smote = SMOTE(\n",
+    "        sampling_strategy='not majority',    # resample all classes but the majority one\n",
+    "        k_neighbors=5\n",
+    "    )\n",
+    "    df, labels = smote.fit_resample(df, labels)\n",
+    "\n",
+    "    #Normalize the dataset\n",
+    "    cols = df.columns\n",
+    "    scaler = MinMaxScaler()\n",
+    "    df = scaler.fit_transform(df.values)\n",
+    "    df = pd.DataFrame(df, columns=cols)\n",
+    "\n",
+    "    # Divide the dataframe to create training and testing sets\n",
+    "    train_set, test_set, train_labels, test_labels = train_test_split(df, labels, stratify=labels, test_size=0.30)\n",
+    "\n",
+    "    assert(len(train_set) == len(train_labels))\n",
+    "    assert(len(test_set) == len(test_labels))\n",
+    "    print(f\"\\n{len(train_labels)} training samples:\")\n",
+    "    print(f\"\\t- {len(train_labels[train_labels == 0])} samples for the class High_Spend\")\n",
+    "    print(f\"\\t- {len(train_labels[train_labels == 1])} samples for the class Low_Spend\")\n",
+    "    print(f\"\\t- {len(train_labels[train_labels == 2])} samples for the class Med_Spend\")\n",
+    "    print(f\"\\n{len(test_labels)} test samples:\")\n",
+    "    print(f\"\\t- {len(test_labels[test_labels == 0])} samples for the class High_Spend\")\n",
+    "    print(f\"\\t- {len(test_labels[test_labels == 1])} samples for the class Low_Spend\")\n",
+    "    print(f\"\\t- {len(test_labels[test_labels == 2])} samples for the class Med_Spend\")\n",
+    "\n",
+    "    # Encode labels with one-hot\n",
+    "    train_labels = to_categorical(train_labels, 3)\n",
+    "    test_labels = to_categorical(test_labels, 3)\n",
+    "\n",
+    "    return train_set, train_labels, test_set, test_labels"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 201,
    "outputs": [],
    "source": [
     "def normalize_and_smote():\n",
@@ -736,7 +796,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 190,
+   "execution_count": 202,
    "outputs": [
     {
      "name": "stdout",
@@ -779,40 +839,6 @@
    }
   },
   {
-   "cell_type": "code",
-   "execution_count": 191,
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Label num for High_Spend: 0\n",
-      "Label num for Low_Spend: 1\n",
-      "Label num for Med_Spend: 2\n"
-     ]
-    }
-   ],
-   "source": [
-    "# discretize and delete the categorical attributes\n",
-    "df = discretize_data(df,['MaxOrderMonth','Label'])\n",
-    "print(f\"Label num for High_Spend: {int(df[df['Label'] == 'High_Spend']['Label_num'].unique())}\")\n",
-    "print(f\"Label num for Low_Spend: {int(df[df['Label'] == 'Low_Spend']['Label_num'].unique())}\")\n",
-    "print(f\"Label num for Med_Spend: {int(df[df['Label'] == 'Med_Spend']['Label_num'].unique())}\")\n",
-    "\n",
-    "# Drop categorical columns and keep only the corresponding numerical ones\n",
-    "df.drop(columns=['MaxOrderMonth','Label'], inplace=True, errors='ignore')\n",
-    "\n",
-    "# Remove the labels from the dataframe and store them in a variable (pandas.Series)\n",
-    "labels = df.pop('Label_num')"
-   ],
-   "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%%\n"
-    }
-   }
-  },
-  {
    "cell_type": "markdown",
    "source": [
     "Oversampling with SMOTE to fix the unbalanced classes.\n",
@@ -827,68 +853,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 192,
-   "outputs": [],
-   "source": [
-    "# SMOTE --> balance the number of entries of each class\n",
-    "smote = SMOTE(\n",
-    "    sampling_strategy='not majority',    # resample all classes but the majority one\n",
-    "    k_neighbors=5\n",
-    ")\n",
-    "df, labels = smote.fit_resample(df, labels)"
-   ],
-   "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%%\n"
-    }
-   }
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 193,
+   "execution_count": 203,
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "Label num for High_Spend: 0\n",
+      "Label num for Low_Spend: 1\n",
+      "Label num for Med_Spend: 2\n",
       "\n",
       "8101 training samples:\n",
       "\t- 2700 samples for the class High_Spend\n",
-      "\t- 2701 samples for the class Low_Spend\n",
-      "\t- 2700 samples for the class Med_Spend\n",
+      "\t- 2700 samples for the class Low_Spend\n",
+      "\t- 2701 samples for the class Med_Spend\n",
       "\n",
       "3473 test samples:\n",
       "\t- 1158 samples for the class High_Spend\n",
-      "\t- 1157 samples for the class Low_Spend\n",
-      "\t- 1158 samples for the class Med_Spend\n"
+      "\t- 1158 samples for the class Low_Spend\n",
+      "\t- 1157 samples for the class Med_Spend\n"
      ]
     }
    ],
    "source": [
-    "#Normalize the dataset\n",
-    "cols = df.columns\n",
-    "scaler = MinMaxScaler()\n",
-    "df = scaler.fit_transform(df.values)\n",
-    "df = pd.DataFrame(df, columns=cols)\n",
-    "\n",
-    "# Divide the dataframe to create training and testing sets\n",
-    "train_set, test_set, train_labels, test_labels = train_test_split(df, labels, stratify=labels, test_size=0.30)\n",
-    "\n",
-    "assert(len(train_set) == len(train_labels))\n",
-    "assert(len(test_set) == len(test_labels))\n",
-    "print(f\"\\n{len(train_labels)} training samples:\")\n",
-    "print(f\"\\t- {len(train_labels[train_labels == 0])} samples for the class High_Spend\")\n",
-    "print(f\"\\t- {len(train_labels[train_labels == 1])} samples for the class Low_Spend\")\n",
-    "print(f\"\\t- {len(train_labels[train_labels == 2])} samples for the class Med_Spend\")\n",
-    "print(f\"\\n{len(test_labels)} test samples:\")\n",
-    "print(f\"\\t- {len(test_labels[test_labels == 0])} samples for the class High_Spend\")\n",
-    "print(f\"\\t- {len(test_labels[test_labels == 1])} samples for the class Low_Spend\")\n",
-    "print(f\"\\t- {len(test_labels[test_labels == 2])} samples for the class Med_Spend\")\n",
-    "\n",
-    "# Encode labels with one-hot\n",
-    "train_labels = to_categorical(train_labels, 3)\n",
-    "test_labels = to_categorical(test_labels, 3)"
+    "# Call function to oversample with SMOTE and then normalize the\n",
+    "train_set, train_labels, test_set, test_labels = smote_and_normalize(df)"
    ],
    "metadata": {
     "collapsed": false,
