--- a/CreateFuzzyLabels.ipynb
+++ b/CreateFuzzyLabels.ipynb
@@ -62,10 +62,14 @@
        "      <th>TOrder</th>\n",
        "      <th>SETSaleQta</th>\n",
        "      <th>SESaleQtaOrder</th>\n",
+       "      <th>MeanTimeGap</th>\n",
        "      <th>MaxOrderMonth</th>\n",
+       "      <th>MaxOrderDay</th>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>CustomerID</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
        "      <th></th>\n",
        "      <th></th>\n",
        "      <th></th>\n",
@@ -96,7 +100,9 @@
        "      <td>34</td>\n",
        "      <td>4.137</td>\n",
        "      <td>3.186</td>\n",
-       "      <td>Feb</td>\n",
+       "      <td>2.088</td>\n",
+       "      <td>Dec</td>\n",
+       "      <td>Thu</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>13047</th>\n",
@@ -112,7 +118,9 @@
        "      <td>9</td>\n",
        "      <td>5.421</td>\n",
        "      <td>3.875</td>\n",
-       "      <td>Jan</td>\n",
+       "      <td>21.800</td>\n",
+       "      <td>Aug</td>\n",
+       "      <td>Wed</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>12583</th>\n",
@@ -128,7 +136,9 @@
        "      <td>15</td>\n",
        "      <td>5.804</td>\n",
        "      <td>4.087</td>\n",
-       "      <td>Aug</td>\n",
+       "      <td>23.188</td>\n",
+       "      <td>Sep</td>\n",
+       "      <td>Fri</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>13748</th>\n",
@@ -144,7 +154,9 @@
        "      <td>5</td>\n",
        "      <td>4.080</td>\n",
        "      <td>2.322</td>\n",
-       "      <td>May</td>\n",
+       "      <td>69.500</td>\n",
+       "      <td>Apr</td>\n",
+       "      <td>Mon</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>15100</th>\n",
@@ -160,10 +172,14 @@
        "      <td>3</td>\n",
        "      <td>2.252</td>\n",
        "      <td>2.252</td>\n",
-       "      <td>Jan</td>\n",
+       "      <td>8.600</td>\n",
+       "      <td>Dec</td>\n",
+       "      <td>Wed</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
        "      <td>...</td>\n",
        "      <td>...</td>\n",
        "      <td>...</td>\n",
@@ -192,7 +208,9 @@
        "      <td>1</td>\n",
        "      <td>3.418</td>\n",
        "      <td>0.000</td>\n",
-       "      <td>Aug</td>\n",
+       "      <td>0.000</td>\n",
+       "      <td>Dec</td>\n",
+       "      <td>Thu</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>15520</th>\n",
@@ -208,7 +226,9 @@
        "      <td>1</td>\n",
        "      <td>2.997</td>\n",
        "      <td>0.000</td>\n",
-       "      <td>Aug</td>\n",
+       "      <td>0.000</td>\n",
+       "      <td>Dec</td>\n",
+       "      <td>Thu</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>13298</th>\n",
@@ -224,7 +244,9 @@
        "      <td>1</td>\n",
        "      <td>1.000</td>\n",
        "      <td>0.000</td>\n",
-       "      <td>Aug</td>\n",
+       "      <td>0.000</td>\n",
+       "      <td>Dec</td>\n",
+       "      <td>Thu</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>14569</th>\n",
@@ -240,7 +262,9 @@
        "      <td>1</td>\n",
        "      <td>3.418</td>\n",
        "      <td>0.000</td>\n",
-       "      <td>Aug</td>\n",
+       "      <td>0.000</td>\n",
+       "      <td>Dec</td>\n",
+       "      <td>Thu</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>12713</th>\n",
@@ -256,11 +280,13 @@
        "      <td>1</td>\n",
        "      <td>4.101</td>\n",
        "      <td>0.000</td>\n",
-       "      <td>Sep</td>\n",
+       "      <td>0.000</td>\n",
+       "      <td>Dec</td>\n",
+       "      <td>Fri</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>4333 rows × 13 columns</p>\n",
+       "<p>4333 rows × 15 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
@@ -292,21 +318,21 @@
        "14569             227.390       0      3.920       1       3.418   \n",
        "12713             794.550       0      2.085       1       4.101   \n",
        "\n",
-       "            SESaleQtaOrder MaxOrderMonth  \n",
-       "CustomerID                                \n",
-       "17850                3.186           Feb  \n",
-       "13047                3.875           Jan  \n",
-       "12583                4.087           Aug  \n",
-       "13748                2.322           May  \n",
-       "15100                2.252           Jan  \n",
-       "...                    ...           ...  \n",
-       "13436                0.000           Aug  \n",
-       "15520                0.000           Aug  \n",
-       "13298                0.000           Aug  \n",
-       "14569                0.000           Aug  \n",
-       "12713                0.000           Sep  \n",
+       "            SESaleQtaOrder  MeanTimeGap MaxOrderMonth MaxOrderDay  \n",
+       "CustomerID                                                         \n",
+       "17850                3.186        2.088           Dec         Thu  \n",
+       "13047                3.875       21.800           Aug         Wed  \n",
+       "12583                4.087       23.188           Sep         Fri  \n",
+       "13748                2.322       69.500           Apr         Mon  \n",
+       "15100                2.252        8.600           Dec         Wed  \n",
+       "...                    ...          ...           ...         ...  \n",
+       "13436                0.000        0.000           Dec         Thu  \n",
+       "15520                0.000        0.000           Dec         Thu  \n",
+       "13298                0.000        0.000           Dec         Thu  \n",
+       "14569                0.000        0.000           Dec         Thu  \n",
+       "12713                0.000        0.000           Dec         Fri  \n",
        "\n",
-       "[4333 rows x 13 columns]"
+       "[4333 rows x 15 columns]"
       ]
      },
      "execution_count": 2,
