working on dates

--- a/SequentialPatternMining.ipynb
+++ b/SequentialPatternMining.ipynb
@@ -139,6 +139,76 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['2010-12-01 16:57:00' '2010-12-01 16:58:00']\n",
+      "['2011-01-05 13:40:00' '2011-01-05 13:41:00']\n",
+      "['2011-01-19 16:18:00' '2011-01-19 16:19:00']\n",
+      "['2011-01-20 10:47:00' '2011-01-20 10:48:00']\n",
+      "['2011-01-21 15:56:00' '2011-01-21 15:57:00']\n",
+      "['2011-01-23 13:33:00' '2011-01-23 13:34:00']\n",
+      "['2011-01-26 12:35:00' '2011-01-26 12:36:00']\n",
+      "['2011-02-01 11:19:00' '2011-02-01 11:20:00']\n",
+      "['2011-02-04 10:31:00' '2011-02-04 10:32:00']\n",
+      "['2011-02-11 16:19:00' '2011-02-11 16:20:00']\n",
+      "['2011-02-22 15:09:00' '2011-02-22 15:10:00']\n",
+      "['2011-02-24 17:50:00' '2011-02-24 17:51:00']\n",
+      "['2011-03-02 17:32:00' '2011-03-02 17:33:00']\n",
+      "['2011-03-03 16:25:00' '2011-03-03 16:26:00']\n",
+      "['2011-03-18 12:55:00' '2011-03-18 12:56:00']\n",
+      "['2011-03-24 14:55:00' '2011-03-24 14:56:00']\n",
+      "['2011-04-07 11:59:00' '2011-04-07 12:00:00']\n",
+      "['2011-04-17 12:37:00' '2011-04-17 12:38:00']\n",
+      "['2011-04-17 14:05:00' '2011-04-17 14:06:00']\n",
+      "['2011-04-19 16:30:00' '2011-04-19 16:31:00']\n",
+      "['2011-05-15 15:13:00' '2011-05-15 15:14:00']\n",
+      "['2011-05-16 14:52:00' '2011-05-16 14:53:00']\n",
+      "['2011-05-17 16:48:00' '2011-05-17 16:49:00']\n",
+      "['2011-05-22 15:11:00' '2011-05-22 15:12:00']\n",
+      "['2011-06-26 11:58:00' '2011-06-26 11:59:00']\n",
+      "['2011-08-03 09:06:00' '2011-08-03 09:07:00']\n",
+      "['2011-08-15 10:53:00' '2011-08-15 10:54:00']\n",
+      "['2011-09-18 15:32:00' '2011-09-18 15:33:00']\n",
+      "['2011-10-19 10:03:00' '2011-10-19 10:04:00']\n",
+      "['2011-11-13 15:05:00' '2011-11-13 15:06:00']\n",
+      "['2011-11-24 15:02:00' '2011-11-24 15:03:00']\n"
+     ]
+    }
+   ],
+   "source": [
+    "# check if there exist orders with different BasketDate in same order\n",
+    "dfp = df.loc[df['CustomerID'] > -1000,['BasketID','BasketDate']]\n",
+    "for basket in dfp['BasketID'].unique():\n",
+    "    dfp2 = dfp[df['BasketID'] == basket]['BasketDate'].unique()\n",
+    "    if len(dfp2) > 1:\n",
+    "        print(dfp2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Therefore we can drop information about hour, minute and seconds to keep a bigger granularity for indexing the transactions\n",
+    "df['BasketDate'] = pd.to_datetime(df[\"BasketDate\"], dayfirst=True)\n",
+    "df['BasketDate'] = df['BasketDate'].dt.date"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Easy to notice that orders are always made on same day (differ at max by one minute intraorder)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 7,
    "metadata": {},
    "outputs": [
