--- a/SequentialPatternMining.ipynb
+++ b/SequentialPatternMining.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -11,12 +11,13 @@
     "import pandas as pd\n",
     "import scipy.stats as stats\n",
     "import matplotlib.pyplot as plt\n",
-    "from tqdm.notebook import tqdm"
+    "from tqdm.notebook import tqdm\n",
+    "from collections import OrderedDict"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [
     {
@@ -126,7 +127,7 @@
        "4       RED WOOLLY HOTTIE WHITE HEART.    6  "
       ]
      },
-     "execution_count": 2,
+     "execution_count": 42,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -139,83 +140,45 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 60,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "['2010-12-01 16:57:00' '2010-12-01 16:58:00']\n",
-      "['2011-01-05 13:40:00' '2011-01-05 13:41:00']\n",
-      "['2011-01-19 16:18:00' '2011-01-19 16:19:00']\n",
-      "['2011-01-20 10:47:00' '2011-01-20 10:48:00']\n",
-      "['2011-01-21 15:56:00' '2011-01-21 15:57:00']\n",
-      "['2011-01-23 13:33:00' '2011-01-23 13:34:00']\n",
-      "['2011-01-26 12:35:00' '2011-01-26 12:36:00']\n",
-      "['2011-02-01 11:19:00' '2011-02-01 11:20:00']\n",
-      "['2011-02-04 10:31:00' '2011-02-04 10:32:00']\n",
-      "['2011-02-11 16:19:00' '2011-02-11 16:20:00']\n",
-      "['2011-02-22 15:09:00' '2011-02-22 15:10:00']\n",
-      "['2011-02-24 17:50:00' '2011-02-24 17:51:00']\n",
-      "['2011-03-02 17:32:00' '2011-03-02 17:33:00']\n",
-      "['2011-03-03 16:25:00' '2011-03-03 16:26:00']\n",
-      "['2011-03-18 12:55:00' '2011-03-18 12:56:00']\n",
-      "['2011-03-24 14:55:00' '2011-03-24 14:56:00']\n",
-      "['2011-04-07 11:59:00' '2011-04-07 12:00:00']\n",
-      "['2011-04-17 12:37:00' '2011-04-17 12:38:00']\n",
-      "['2011-04-17 14:05:00' '2011-04-17 14:06:00']\n",
-      "['2011-04-19 16:30:00' '2011-04-19 16:31:00']\n",
-      "['2011-05-15 15:13:00' '2011-05-15 15:14:00']\n",
-      "['2011-05-16 14:52:00' '2011-05-16 14:53:00']\n",
-      "['2011-05-17 16:48:00' '2011-05-17 16:49:00']\n",
-      "['2011-05-22 15:11:00' '2011-05-22 15:12:00']\n",
-      "['2011-06-26 11:58:00' '2011-06-26 11:59:00']\n",
-      "['2011-08-03 09:06:00' '2011-08-03 09:07:00']\n",
-      "['2011-08-15 10:53:00' '2011-08-15 10:54:00']\n",
-      "['2011-09-18 15:32:00' '2011-09-18 15:33:00']\n",
-      "['2011-10-19 10:03:00' '2011-10-19 10:04:00']\n",
-      "['2011-11-13 15:05:00' '2011-11-13 15:06:00']\n",
-      "['2011-11-24 15:02:00' '2011-11-24 15:03:00']\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "# check if there exist orders with different BasketDate in same order\n",
-    "dfp = df.loc[df['CustomerID'] > -1000,['BasketID','BasketDate']]\n",
-    "for basket in dfp['BasketID'].unique():\n",
-    "    dfp2 = dfp[df['BasketID'] == basket]['BasketDate'].unique()\n",
-    "    if len(dfp2) > 1:\n",
-    "        print(dfp2)"
+    "# utility to transform list of dicts into list of lists of transactions, given a particular customer\n",
+    "def getCustomerTransactions(cust_trans,customer):\n",
+    "    cust_dict_list = cust_trans[customer]\n",
+    "    cust_trans_list = list()\n",
+    "    for _,v in cust_dict_list.items():\n",
+    "        cust_trans_list.append(v)\n",
+    "    return cust_trans_list\n",
+    "    "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Therefore we can drop information about hour, minute and seconds to keep a bigger granularity for indexing the transactions\n",
-    "df['BasketDate'] = pd.to_datetime(df[\"BasketDate\"], dayfirst=True)\n",
-    "df['BasketDate'] = df['BasketDate'].dt.date"
+    "df['BasketDate'] = pd.to_datetime(df[\"BasketDate\"], dayfirst=True)"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Easy to notice that orders are always made on same day (differ at max by one minute intraorder)"
+    "#### It is easy to notice that orders are always made on same day (differ at max by one minute intraorder)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "84ec9bbd9b2a49b990c262ce6c7d07c3",
+       "model_id": "ff20d4fba60340bf8ac2a1a7ec0bcaad",
        "version_major": 2,
        "version_minor": 0
       },
@@ -232,17 +195,127 @@
      "text": [
       "\n"
      ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "'\\nfor a simpler version\\n\"{customer: [[transaction1][transaction2]]}\"\\ncust_trans = {}\\nfor customer in tqdm(df[\\'CustomerID\\'].unique(), total=len(df[\\'CustomerID\\'].unique()), desc=\"Iterating over customers\"):\\n    cust_trans_list = []\\n    cust_df = df.loc[df[\\'CustomerID\\'] == customer,[\\'BasketID\\', \\'ProdID\\']]\\n    for basket in cust_df[\\'BasketID\\'].unique():\\n        prod_list = cust_df[cust_df[\\'BasketID\\'] == basket][\\'ProdID\\'].unique() #REMINDER FOR MYSELF: IS IT CORRECT TO MAINTAIN IN A TRANSACTION ONLY UNIQUE PRODIDS, NO REPETITIONS? FROM WHAT I SEE THIS SEEMS TO BE THE CASE BUT TRY TO SEARCH FOR CONFIRMATION\\n        cust_trans_list.append(prod_list)\\n    cust_trans[customer] = cust_trans_list\\n    \\n'"
+      ]
+     },
+     "execution_count": 45,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
+    "\"{customer: {date: [[transaction1][transaction2]]}}\"\n",
     "cust_trans = {}\n",
     "for customer in tqdm(df['CustomerID'].unique(), total=len(df['CustomerID'].unique()), desc=\"Iterating over customers\"):\n",
-    "    cust_trans_list = []\n",
+    "    cust_trans_ord_dict = OrderedDict()\n",
+    "    cust_df = df.loc[df['CustomerID'] == customer,['BasketID', 'BasketDate', 'ProdID']]\n",
+    "    for basket in cust_df['BasketID'].unique():\n",
+    "        prod_list = cust_df[cust_df['BasketID'] == basket]['ProdID'].unique() #REMINDER FOR MYSELF: IS IT CORRECT TO MAINTAIN IN A TRANSACTION ONLY UNIQUE PRODIDS, NO REPETITIONS? FROM WHAT I SEE THIS SEEMS TO BE THE CASE BUT TRY TO SEARCH FOR CONFIRMATION\n",
+    "        date = cust_df[cust_df['BasketID'] == basket]['BasketDate'].unique()[0] #because of what said above we can take first date of order (at max we will have 2 elements differing of 1 minute)\n",
+    "        cust_trans_ord_dict[date] = prod_list\n",
+    "    cust_trans[customer] = cust_trans_ord_dict\n",
+    "    \n",
+    "\"\"\"\n",
+    "for a simpler version (IF WE NEED IT)\n",
+    "\"{customer: [[transaction1][transaction2]]}\"\n",
+    "cust_trans = {}\n",
+    "for customer in tqdm(df['CustomerID'].unique(), total=len(df['CustomerID'].unique()), desc=\"Iterating over customers\"):\n",
+    "    cust_trans_list = list()\n",
     "    cust_df = df.loc[df['CustomerID'] == customer,['BasketID', 'ProdID']]\n",
     "    for basket in cust_df['BasketID'].unique():\n",
     "        prod_list = cust_df[cust_df['BasketID'] == basket]['ProdID'].unique() #REMINDER FOR MYSELF: IS IT CORRECT TO MAINTAIN IN A TRANSACTION ONLY UNIQUE PRODIDS, NO REPETITIONS? FROM WHAT I SEE THIS SEEMS TO BE THE CASE BUT TRY TO SEARCH FOR CONFIRMATION\n",
     "        cust_trans_list.append(prod_list)\n",
-    "    cust_trans[customer] = cust_trans_list\n"
+    "    cust_trans[customer] = cust_trans_list\n",
+    "    \n",
+    "\"\"\"\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 66,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[array(['85123A', '71053', '84406B', '84029G', '84029E', '22752', '21730'],\n",
+       "       dtype=object),\n",
+       " array(['22633', '22632'], dtype=object),\n",
+       " array(['22632', '22633'], dtype=object),\n",
+       " array(['85123A', '71053', '84406B', '20679', '37370', '21871', '21071',\n",
+       "        '21068', '82483', '82486', '82482', '82494L', '84029G', '84029E',\n",
+       "        '22752', '21730'], dtype=object),\n",
+       " array(['85123A', '71053', '84406B', '20679', '37370', '21871', '21071',\n",
+       "        '21068', '82483', '82486', '82482', '82494L', '84029G', '84029E',\n",
+       "        '22752', '21730'], dtype=object),\n",
+       " array(['22632', '22633'], dtype=object),\n",
+       " array(['85123A', '71053', '84406B', '15056BL', '20679', '37370', '21871',\n",
+       "        '21071', '21068', '82483', '82486', '82482', '82494L', '84029G',\n",
+       "        '84029E', '22752', '22803', '21730'], dtype=object),\n",
+       " array(['22632', '22633'], dtype=object),\n",
+       " array(['85123A', '71053', '84406B', '20679', '37370', '21871', '21071',\n",
+       "        '21068', '82483', '82486', '82482', '82494L', '84029G', '84029E',\n",
+       "        '22752', '22803', '21730'], dtype=object),\n",
+       " array(['22632', '22633'], dtype=object),\n",
+       " array(['85123A', '71053', '82483', '82486', '82482', '82494L', '22411',\n",
+       "        '84029G', '84029E', '22752', '22803', '21730'], dtype=object),\n",
+       " array(['22632', '22633'], dtype=object),\n",
+       " array(['37370', '21871', '21071', '21068', '82483', '22411', '84029G',\n",
+       "        '84029E', '21730', '22752', '85123A', '71053'], dtype=object),\n",
+       " array(['22632', '22633'], dtype=object),\n",
+       " array(['85123A', '71053', '84406B', '37370', '21871', '21071', '21068',\n",
+       "        '82483', '82486', '82482', '82494L', '22411', '84029G', '84029E',\n",
+       "        '22752', '21730'], dtype=object),\n",
+       " array(['22632', '22633'], dtype=object),\n",
+       " array(['22632', '22633'], dtype=object),\n",
+       " array(['85123A', '71053', '84406B', '37370', '21871', '21071', '21068',\n",
+       "        '82483', '82486', '82482', '82494L', '22411', '84029G', '84029E',\n",
+       "        '22752', '21730'], dtype=object),\n",
+       " array(['22632', '22633'], dtype=object),\n",
+       " array(['85123A', '71053', '84406B', '37370', '21871', '21071', '21068',\n",
+       "        '82483', '82486', '82482', '82494L', '22411', '84029G', '84029E',\n",
+       "        '22752', '21730'], dtype=object),\n",
+       " array(['22632', '22633'], dtype=object),\n",
+       " array(['84029E', '22752', '22803', '21730', '85123A', '71053', '84406B',\n",
+       "        '37370', '21871', '21071', '21068', '82483', '82486', '82482',\n",
+       "        '82494L', '22411', '84029G'], dtype=object),\n",
+       " array(['22632', '22633'], dtype=object),\n",
+       " array(['85123A', '71053', '84406B', '37370', '21871', '21071', '21068',\n",
+       "        '82483', '82486', '82482', '82494L', '22411', '84029G', '84029E',\n",
+       "        '22752', '22803', '21730'], dtype=object),\n",
+       " array(['22632', '22633'], dtype=object),\n",
+       " array(['85123A', '71053', '84406B', '15056BL', '20679', '37370', '21871',\n",
+       "        '21071', '21068', '82483', '82486', '82482', '82494L', '22411',\n",
+       "        '84029G', '84029E', '22752', '22803', '21730'], dtype=object),\n",
+       " array(['22632', '22633'], dtype=object),\n",
+       " array(['85123A', '71053', '84406B', '15056BL', '20679', '37370', '21871',\n",
+       "        '21071', '21068', '82483', '82486', '82482', '82494L', '22411',\n",
+       "        '84029G', '84029E', '22752', '22803', '21730'], dtype=object),\n",
+       " array(['22632', '22633'], dtype=object),\n",
+       " array(['85123A', '71053', '84406B', '37370', '21871', '21071', '21068',\n",
+       "        '82482', '82494L', '84029G', '84029E', '22752', '21730'],\n",
+       "       dtype=object),\n",
+       " array(['22633', '22632'], dtype=object),\n",
+       " array(['85123A', '71053', '84406B', '15056BL', '20679', '37370', '21071',\n",
+       "        '21068', '82483', '82486', '82482', '82494L', '84029G', '84029E',\n",
+       "        '22752', '22803', '21730'], dtype=object),\n",
+       " array(['22632', '22633'], dtype=object),\n",
+       " array(['82483', '22632', '21871', '82494L', '21730', '21071'],\n",
+       "       dtype=object)]"
+      ]
+     },
+     "execution_count": 66,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# usage example\n",
+    "getCustomerTransactions(cust_trans,17850)"
    ]
   }
  ],
