all good up to now

--- a/SequentialPatternMining.ipynb
+++ b/SequentialPatternMining.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -12,12 +12,13 @@
     "import scipy.stats as stats\n",
     "import matplotlib.pyplot as plt\n",
     "from tqdm.notebook import tqdm\n",
-    "from collections import OrderedDict"
+    "from collections import OrderedDict\n",
+    "from fim import apriori"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -127,7 +128,7 @@
        "4       RED WOOLLY HOTTIE WHITE HEART.    6  "
       ]
      },
-     "execution_count": 42,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -140,13 +141,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
     "# utility to transform list of dicts into list of lists of transactions, given a particular customer\n",
-    "def getCustomerTransactions(cust_trans,customer):\n",
-    "    cust_dict_list = cust_trans[customer]\n",
+    "def getCustomerTransactions(cust_trans_dates,customer):\n",
+    "    cust_dict_list = cust_trans_dates[customer]\n",
     "    cust_trans_list = list()\n",
     "    for _,v in cust_dict_list.items():\n",
     "        cust_trans_list.append(v)\n",
@@ -156,7 +157,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -172,13 +173,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "ff20d4fba60340bf8ac2a1a7ec0bcaad",
+       "model_id": "566a2a240f8a4218a09803472bcae6fd",
        "version_major": 2,
        "version_minor": 0
       },
@@ -195,49 +196,32 @@
      "text": [
       "\n"
      ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "'\\nfor a simpler version\\n\"{customer: [[transaction1][transaction2]]}\"\\ncust_trans = {}\\nfor customer in tqdm(df[\\'CustomerID\\'].unique(), total=len(df[\\'CustomerID\\'].unique()), desc=\"Iterating over customers\"):\\n    cust_trans_list = []\\n    cust_df = df.loc[df[\\'CustomerID\\'] == customer,[\\'BasketID\\', \\'ProdID\\']]\\n    for basket in cust_df[\\'BasketID\\'].unique():\\n        prod_list = cust_df[cust_df[\\'BasketID\\'] == basket][\\'ProdID\\'].unique() #REMINDER FOR MYSELF: IS IT CORRECT TO MAINTAIN IN A TRANSACTION ONLY UNIQUE PRODIDS, NO REPETITIONS? FROM WHAT I SEE THIS SEEMS TO BE THE CASE BUT TRY TO SEARCH FOR CONFIRMATION\\n        cust_trans_list.append(prod_list)\\n    cust_trans[customer] = cust_trans_list\\n    \\n'"
-      ]
-     },
-     "execution_count": 45,
-     "metadata": {},
-     "output_type": "execute_result"
     }
    ],
    "source": [
-    "\"{customer: {date: [[transaction1][transaction2]]}}\"\n",
+    "\"cust_trans_dates = {customer: {date: [[transaction1][transaction2]]}}\"\n",
+    "\"cust_trans = {customer: [[transaction1][transaction2]]}\"\n",
+    "cust_trans_dates = {}\n",
     "cust_trans = {}\n",
     "for customer in tqdm(df['CustomerID'].unique(), total=len(df['CustomerID'].unique()), desc=\"Iterating over customers\"):\n",
     "    cust_trans_ord_dict = OrderedDict()\n",
+    "    cust_trans_list = list()\n",
     "    cust_df = df.loc[df['CustomerID'] == customer,['BasketID', 'BasketDate', 'ProdID']]\n",
     "    for basket in cust_df['BasketID'].unique():\n",
     "        prod_list = cust_df[cust_df['BasketID'] == basket]['ProdID'].unique() #REMINDER FOR MYSELF: IS IT CORRECT TO MAINTAIN IN A TRANSACTION ONLY UNIQUE PRODIDS, NO REPETITIONS? FROM WHAT I SEE THIS SEEMS TO BE THE CASE BUT TRY TO SEARCH FOR CONFIRMATION\n",
     "        date = cust_df[cust_df['BasketID'] == basket]['BasketDate'].unique()[0] #because of what said above we can take first date of order (at max we will have 2 elements differing of 1 minute)\n",
     "        cust_trans_ord_dict[date] = prod_list\n",
-    "    cust_trans[customer] = cust_trans_ord_dict\n",
-    "    \n",
-    "\"\"\"\n",
-    "for a simpler version (IF WE NEED IT)\n",
-    "\"{customer: [[transaction1][transaction2]]}\"\n",
-    "cust_trans = {}\n",
-    "for customer in tqdm(df['CustomerID'].unique(), total=len(df['CustomerID'].unique()), desc=\"Iterating over customers\"):\n",
-    "    cust_trans_list = list()\n",
-    "    cust_df = df.loc[df['CustomerID'] == customer,['BasketID', 'ProdID']]\n",
-    "    for basket in cust_df['BasketID'].unique():\n",
-    "        prod_list = cust_df[cust_df['BasketID'] == basket]['ProdID'].unique() #REMINDER FOR MYSELF: IS IT CORRECT TO MAINTAIN IN A TRANSACTION ONLY UNIQUE PRODIDS, NO REPETITIONS? FROM WHAT I SEE THIS SEEMS TO BE THE CASE BUT TRY TO SEARCH FOR CONFIRMATION\n",
     "        cust_trans_list.append(prod_list)\n",
-    "    cust_trans[customer] = cust_trans_list\n",
-    "    \n",
-    "\"\"\"\n"
+    "    cust_trans_dates[customer] = cust_trans_ord_dict\n",
+    "    cust_trans[customer] = cust_trans_list"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
-   "metadata": {},
+   "execution_count": 6,
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "data": {
@@ -308,14 +292,181 @@
        "       dtype=object)]"
       ]
      },
-     "execution_count": 66,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "# usage example\n",
-    "getCustomerTransactions(cust_trans,17850)"
+    "getCustomerTransactions(cust_trans_dates,17850)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Help on built-in function apriori in module fim:\n",
+      "\n",
+      "apriori(...)\n",
+      "    apriori (tracts, target='s', supp=10, zmin=1, zmax=None, report='a',\n",
+      "             eval='x', agg='x', thresh=10, prune=None, algo='b', mode='',\n",
+      "             border=None)\n",
+      "    Find frequent item sets with the Apriori algorithm.\n",
+      "    tracts  transaction database to mine (mandatory)\n",
+      "            The database must be an iterable of transactions;\n",
+      "            each transaction must be an iterable of items;\n",
+      "            each item must be a hashable object.\n",
+      "            If the database is a dictionary, the transactions are\n",
+      "            the keys, the values their (integer) multiplicities.\n",
+      "    target  type of frequent item sets to find     (default: s)\n",
+      "            s/a   sets/all   all     frequent item sets\n",
+      "            c     closed     closed  frequent item sets\n",
+      "            m     maximal    maximal frequent item sets\n",
+      "            g     gens       generators\n",
+      "            r     rules      association rules\n",
+      "    supp    minimum support of an item set         (default: 10)\n",
+      "            (positive: percentage, negative: absolute number)\n",
+      "    conf    minimum confidence of an assoc. rule   (default: 80%)\n",
+      "    zmin    minimum number of items per item set   (default: 1)\n",
+      "    zmax    maximum number of items per item set   (default: no limit)\n",
+      "    report  values to report with an item set      (default: a)\n",
+      "            a     absolute item set support (number of transactions)\n",
+      "            s     relative item set support as a fraction\n",
+      "            S     relative item set support as a percentage\n",
+      "            e     value of item set evaluation measure\n",
+      "            E     value of item set evaluation measure as a percentage\n",
+      "            (     combine values in a tuple (must be first character)\n",
+      "            [     combine values in a list  (must be first character)\n",
+      "            #     pattern spectrum as a dictionary  (no patterns)\n",
+      "            =     pattern spectrum as a list        (no patterns)\n",
+      "            |     pattern spectrum as three columns (no patterns)\n",
+      "            for target 'r' (association rules) also available:\n",
+      "            b     absolute body set  support (number of transactions)\n",
+      "            x     relative body set  support as a fraction\n",
+      "            X     relative body set  support as a percentage\n",
+      "            h     absolute head item support (number of transactions)\n",
+      "            y     relative head item support as a fraction\n",
+      "            Y     relative head item support as a percentage\n",
+      "            c     rule confidence as a fraction\n",
+      "            C     rule confidence as a percentage\n",
+      "            l     lift value of a rule (confidence/prior)\n",
+      "            L     lift value of a rule as a percentage\n",
+      "            Q     support of the empty set (total number of transactions)\n",
+      "    eval    measure for item set evaluation        (default: x)\n",
+      "            x     none       no measure / zero (default)\n",
+      "            b     ldratio    binary logarithm of support quotient       (+)\n",
+      "            c     conf       rule confidence                            (+)\n",
+      "            d     confdiff   absolute confidence difference to prior    (+)\n",
+      "            l     lift       lift value (confidence divided by prior)   (+)\n",
+      "            a     liftdiff   absolute difference of lift value to 1     (+)\n",
+      "            q     liftquot   difference of lift quotient to 1           (+)\n",
+      "            v     cvct       conviction (inverse lift negated head)     (+)\n",
+      "            e     cvctdiff   absolute difference of conviction to 1     (+)\n",
+      "            r     cvctquot   difference of conviction quotient to 1     (+)\n",
+      "            k     cprob      conditional probability ratio              (+)\n",
+      "            j     import     importance (binary log. of prob. ratio)    (+)\n",
+      "            z     cert       certainty factor (relative conf. change)   (+)\n",
+      "            n     chi2       normalized chi^2 measure                   (+)\n",
+      "            p     chi2pval   p-value f/ (unnormalized) chi^2 measure    (-)\n",
+      "            y     yates      normalized chi^2 with Yates' correction    (+)\n",
+      "            t     yatespval  p-value f/ Yates-corrected chi^2 measure   (-)\n",
+      "            i     info       information difference to prior            (+)\n",
+      "            g     infopval   p-value f/ G statistic/info. difference    (-)\n",
+      "            f     fetprob    Fisher's exact test (table probability)    (-)\n",
+      "            h     fetchi2    Fisher's exact test (chi^2 measure)        (-)\n",
+      "            m     fetinfo    Fisher's exact test (mutual information)   (-)\n",
+      "            s     fetsupp    Fisher's exact test (support)              (-)\n",
+      "            Measures marked with (+) must meet or exceed the threshold,\n",
+      "            measures marked with (-) must not exceed the threshold\n",
+      "            in order for the item set to be reported.\n",
+      "    agg     evaluation measure aggregation mode    (default: x)\n",
+      "            x     none       no aggregation (use first value)\n",
+      "            m     min        minimum of individual measure values\n",
+      "            n     max        maximum of individual measure values\n",
+      "            a     avg        average of individual measure values\n",
+      "    thresh  threshold for evaluation measure       (default: 10%)\n",
+      "    prune   min. size for evaluation filtering     (default: no pruning)\n",
+      "            = 0   backward filtering       (no subset check)\n",
+      "            < 0   weak   forward filtering (one subset  must qualify)\n",
+      "            > 0   strong forward filtering (all subsets must qualify)\n",
+      "    algo    algorithm variant to use               (default: a)\n",
+      "            b     basic      standard algorithm (only choice)\n",
+      "    mode    operation mode indicators/flags        (default: None)\n",
+      "            x     do not use perfect extension pruning\n",
+      "            t/T   do not organize transactions as a prefix tree\n",
+      "            y     a-posteriori pruning of infrequent item sets\n",
+      "            z     invalidate evaluation below expected support\n",
+      "            o     use original rule support definition (body & head)\n",
+      "    border  support border for filtering item sets (default: None)\n",
+      "            Must be a list or tuple of (absolute) minimum support values\n",
+      "            per item set size (by which the list/tuple is indexed).\n",
+      "    appear  dictionary mapping items to item appearance indicators,\n",
+      "            with the key None referring to the default item appearance.\n",
+      "            (If None does not occur as a key or no dictionary is given,\n",
+      "            the default item appearance indicator is 'both'.)\n",
+      "            This parameter is only used if the target type is rules.\n",
+      "            * item may not appear anywhere in a rule:\n",
+      "              '-', 'n', 'none', 'neither', 'ignore'\n",
+      "            * item may appear only in rule body/antecedent:\n",
+      "              'i', 'in', 'inp', 'input', 'b', 'body',\n",
+      "              'a', 'ante', 'antecedent'\n",
+      "            * item may appear only in rule head/consequent:\n",
+      "              'o', 'out',      'output', 'h', 'head',\n",
+      "              'c', 'cons', 'consequent'\n",
+      "            * item may appear anywhere in a rule:\n",
+      "              'io', 'i&o', 'inout', 'in&out', 'bh', 'b&h', 'both'\n",
+      "    returns if report is not in ['#','=','|']:\n",
+      "              if the target is association rules:\n",
+      "                a list of rules (i.e. tuples with two or more elements),\n",
+      "                each consisting of a head/consequent item, a tuple with\n",
+      "                a body/antecedent item set, and the values selected by\n",
+      "                the parameter 'report', which may be combined into a\n",
+      "                tuple or a list if report[0] is '(' or '[', respectively.\n",
+      "              if the target is a type of item sets:\n",
+      "                a list of patterns (i.e. tuples with one or more elements),\n",
+      "                each consisting of a tuple with a found frequent item set\n",
+      "                and the values selected by the parameter 'report', which\n",
+      "                may be combined into a tuple or list if report[0] is '('\n",
+      "                or '[', respectively\n",
+      "            if report in ['#','=','|']:\n",
+      "              a pattern spectrum as a dictionary mapping pattern sizes\n",
+      "              to the corresponding occurrence support ranges, as a list\n",
+      "              of triplets (size, min. support, max. support) or as three\n",
+      "              columns for sizes and minimum and maximum support values\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "help(apriori)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 45,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[((1,), 2)]"
+      ]
+     },
+     "execution_count": 45,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "trans = [[0,1],[1,2,3]]\n",
+    "itemsets = apriori(trans, supp=80, zmin=1, zmax=5, target='a') \n",
+    "itemsets"
    ]
   }
  ],
