--- a/SequentialPatternMining.ipynb
+++ b/SequentialPatternMining.ipynb
@@ -1,8 +1,15 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# SEQUENTIAL PATTERN MINING"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -14,6 +21,42 @@
     "from tqdm.notebook import tqdm\n",
     "from collections import OrderedDict\n",
     "from fim import apriori"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "***"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### UTILITY"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# utility to transform list of dicts into list of lists of transactions, given a particular customer\n",
+    "def getCustomerTransactions(cust_trans_dates,customer):\n",
+    "    cust_dict_list = cust_trans_dates[customer]\n",
+    "    cust_trans_list = list()\n",
+    "    for _,v in cust_dict_list.items():\n",
+    "        cust_trans_list.append(v)\n",
+    "    return cust_trans_list"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "***"
    ]
   },
   {
@@ -143,7 +186,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# CUSTOMER ANALYSIS"
+    "### CUSTOMER ANALYSIS"
    ]
   },
   {
@@ -348,7 +391,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -360,21 +403,6 @@
       "Total amount of customers with < 4 orders: 2837\n",
       "Total amount of customers with < 3 orders: 2335\n"
      ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "Int64Index([15100, 18074, 17420, 16250, 13705, 13747, 15862, 12791, 14045,\n",
-       "            17908,\n",
-       "            ...\n",
-       "            16000, 15195, 14087, 14204, 15471, 13436, 15520, 13298, 14569,\n",
-       "            12713],\n",
-       "           dtype='int64', name='CustomerID', length=3232)"
-      ]
-     },
-     "execution_count": 20,
-     "metadata": {},
-     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -388,7 +416,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -398,22 +426,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# utility to transform list of dicts into list of lists of transactions, given a particular customer\n",
-    "def getCustomerTransactions(cust_trans_dates,customer):\n",
-    "    cust_dict_list = cust_trans_dates[customer]\n",
-    "    cust_trans_list = list()\n",
-    "    for _,v in cust_dict_list.items():\n",
-    "        cust_trans_list.append(v)\n",
-    "    return cust_trans_list"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -429,18 +442,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "b561de64b7dc44e28bc22230217c6b82",
+       "model_id": "47592ec4c7994e1d94e51d38e10b874f",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "HBox(children=(HTML(value='Iterating over customers'), FloatProgress(value=0.0, max=4333.0), HTML(value='')))"
+       "HBox(children=(HTML(value='Iterating over customers'), FloatProgress(value=0.0, max=1101.0), HTML(value='')))"
       ]
      },
      "metadata": {},
@@ -474,7 +487,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 9,
    "metadata": {
     "scrolled": true
    },
@@ -744,19 +757,19 @@
        " ['82483', '22632', '21871', '82494L', '21730', '21071']]"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "# usage example\n",
+    "# usage example for date including structure\n",
     "getCustomerTransactions(cust_trans_dates,17850)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -901,40 +914,38 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 11,
    "metadata": {
     "scrolled": true
    },
    "outputs": [
     {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "437412cb85a648ed956772eb719618d6",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "HBox(children=(HTML(value='Iterating over customer to analyze transactions'), FloatProgress(value=0.0, max=2.0…"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[(('15056BL', '20679', '22803', '82486', '84406B', '82482', '21068', '37370', '22752', '82483', '21071', '82494L', '84029E', '84029G', '71053', '85123A', '21730'), 4), (('20679', '22803', '82486', '21871', '84406B', '82482', '21068', '37370', '22752', '82483', '21071', '82494L', '84029E', '84029G', '71053', '85123A', '21730'), 4), (('22803', '22411', '82486', '21871', '84406B', '82482', '21068', '37370', '22752', '82483', '21071', '82494L', '84029E', '84029G', '71053', '85123A', '21730'), 4)]\n",
-      "[(('23118', '23029', '22423', '85123A', '23028', '23112', '23110', '23111', '23236', '23245', '22720'), 2), (('23093', '23240', '23173', '23028', '23112', '23110', '23111', '23236', '23245', '21755', '22720'), 2)]\n",
-      "\n"
+     "ename": "SyntaxError",
+     "evalue": "invalid syntax (<ipython-input-11-25dfc76aa88d>, line 5)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;36m  File \u001b[1;32m\"<ipython-input-11-25dfc76aa88d>\"\u001b[1;36m, line \u001b[1;32m5\u001b[0m\n\u001b[1;33m    \"\"\"\u001b[0m\n\u001b[1;37m       \n^\u001b[0m\n\u001b[1;31mSyntaxError\u001b[0m\u001b[1;31m:\u001b[0m invalid syntax\n"
      ]
     }
    ],
    "source": [
     "trans = list(cust_trans.values())\n",
-    "for cust in tqdm(trans[0:2], total=2, desc=\"Iterating over customer to analyze transactions\"):\n",
-    "    itemsets = apriori(cust, supp=10, zmin=10, target='m')\n",
-    "    print(itemsets)"
+    "itemsets_list = []\n",
+    "for cust in tqdm(trans, total=len(trans), desc=\"Iterating over customer to analyze transactions\"):\n",
+    "    itemsets = apriori(cust, supp=70, zmin=20, target='s')\n",
+    "    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# numero 16 fa paura con sup 10\n",
+    "#considerazioni su tutto l'insieme:\n",
+    "# con sup in range 80-99 tutto ok\n",
+    "# sup 70 is DEATH"
    ]
   }
  ],
